login frontend done

--- a/.md
+++ b/.md
@@ -2,3 +2,4 @@
 2. [] allignments of searchbar
 3. [] issue of sliderbar
 4. [] disable search icon from use state
+5. [] header contains sign up, it should disable after sign in
