--- a/.md
+++ b/.md
@@ -1,5 +1,6 @@
 1. [] allignments of footer
 2. [] allignments of searchbar
-3. [] issue of sliderbar
+3. [x] issue of sliderbar
 4. [] disable search icon from use state
 5. [] header contains sign up, it should disable after sign in
+6. [] time picker 24h,
